# recyclamer_

./: .gitmodules  README.md  pasos  solucion a problemas comunes
ar_track_alvar/ar_track_alvar/launch/: pr2_indiv_no_kinect.launch
custom_msg/msg/: movement.msg
devel/: .catkin  setup.sh
devel/include/ar_track_alvar_msgs/: AlvarMarker.h  AlvarMarkers.h
devel/include/custom_msg/: movement.h
devel/include/pid/: PidConfig.h
devel/include/usv_msgs/: RangeBearing.h
devel/include/vrx_gazebo/: ColorSequenceRequest.h  ColorSequenceResponse.h  Contact.h  Task.h
devel/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
devel/lib/cdr/: subTeclado
devel/lib/pid/: autotune  controller  plant_sim  setpoint_node  sim_time
devel/lib/pkgconfig/: ar_tag_toolbox.pc  ar_track_alvar.pc  ar_track_alvar_msgs.pc  cdr.pc  custom_msg.pc  pid.pc  rotacion.pc  teleop_twist_keyboard.pc  usv_gazebo_plugins.pc  usv_msgs.pc  vrx_gazebo.pc  wamv_description.pc  wamv_gazebo.pc  wave_gazebo.pc  wave_gazebo_plugins.pc
devel/lib/rotacion/: convertidor.py
devel/lib/vrx_gazebo/: generate_worlds  (+1 more)
pid/launch/: velocity.launch
rotacion/: CMakeLists.txt  convertidor.py  convertidorOrientacion.py  movGPS.py  movGps.py
src/Prueba_nodo_rosserial/: Prueba_nodo_rosserial.ino
src/ar_tag_toolbox/: CMakeLists.txt
src/cdr/: CMakeLists.txt
src/cdr/launch/: movimeinto.launch
src/cdr/src/: subTeclado.cpp  triagnulationTags.py
src/custom_msg/: CMakeLists.txt
src/rotacion/: CMakeLists.txt
(+100 files in other folders)
